fix(ui): long text overflow

--- a/ui/src/app/features/team/components/team-preview/team-preview.component.scss
+++ b/ui/src/app/features/team/components/team-preview/team-preview.component.scss
@@ -4,7 +4,6 @@
   width: fit-content;
   max-width: 8em;
   height: 1.2em;
-  overflow: hidden;
   display: flex;
   align-items: center;
   background-color: var(--bg-color-2);
